# movies

./: gnome_tags.csv  links.csv  movies.csv  users.csv
movies-etl/: README.md  pyproject.toml
movies-etl/.tmp_dagster_home_tvu335uk/history/: runs.db
movies-etl/.tmp_dagster_home_tvu335uk/history/runs/: index.db
movies-etl/.tmp_dagster_home_tvu335uk/schedules/: schedules.db
movies-etl/dlt_pipelines/.dlt/: config.toml  secrets.toml
movies-etl/mi_transformaciones/: dbt_project.yml  profile.yml
